tests/packaging-test/test_out/invalid-module.txt
error: failed to read source file
 --> invalid-module\root\a.ctl:2:5
  |
2 |     "./a/b"
  |     ^^^^^^^ declared here
  |
  = info: path: `invalid-module\root\a/b.ctl`
  = info: trace: file not found

